// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel[Base] should render correctly  1`] = `
<div
  class="c-z4rj0o c-ur0qk8 cw9k4w6"
  style="width: 600px; height: auto;"
>
  <div
    class="c61t1i4"
    style="height: 280px;"
  >
    <div
      class="c-k3pgz6 c9en45n"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
      />
    </div>
    <div
      class="c-k3pgz6"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
      />
    </div>
    <div
      class="c-k3pgz6"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
      />
    </div>
    <div
      class="c-k3pgz6"
    >
      <img
        src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
      />
    </div>
  </div>
  <div
    class="c-96poap c-j4fn87 c-d5e41u"
  >
    <div
      class="c-xy6r4c c-k3iv1i"
    />
    <div
      class="c-xy6r4c"
    />
    <div
      class="c-xy6r4c"
    />
    <div
      class="c-xy6r4c"
    />
  </div>
  <div
    class="c-622cia cbkyy2t"
  >
    <div
      class="cvvuswl cvvt71d"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
        />
      </svg>
    </div>
    <div
      class="c-5wojjm cvvt71d"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Carousel[Base] should render correctly about animation 1`] = `
<div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      animation type:
    </div>
    <div
      class="cw6sirj"
    >
      <div
        class="c-emivhp c-wsxxws"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          slide
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          slide-y
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          fade
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-z4rj0o c-ur0qk8 cw9k4w6"
    style="width: 600px; height: auto;"
  >
    <div
      class="c61t1i4"
      style="height: 280px;"
    >
      <div
        class="c-k3pgz6 c9en45n"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
        />
      </div>
      <div
        class="c-k3pgz6"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
        />
      </div>
      <div
        class="c-k3pgz6"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
        />
      </div>
      <div
        class="c-k3pgz6"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
        />
      </div>
    </div>
    <div
      class="c-96poap c-j4fn87 c-d5e41u"
    >
      <div
        class="c-xy6r4c c-k3iv1i"
      />
      <div
        class="c-xy6r4c"
      />
      <div
        class="c-xy6r4c"
      />
      <div
        class="c-xy6r4c"
      />
    </div>
  </div>
</div>
`;

exports[`Carousel[Base] should render correctly about indicator 1`] = `
<div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      indicator position:
    </div>
    <div
      class="cw6sirj"
    >
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          left
        </span>
      </div>
      <div
        class="c-emivhp c-wsxxws"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          center
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          right
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          outer
        </span>
      </div>
    </div>
  </div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 150px;"
    >
      indicator type:
    </div>
    <div
      class="cw6sirj"
    >
      <div
        class="c-emivhp c-wsxxws"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          circle
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          line
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          number
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-z4rj0o c-ur0qk8 cw9k4w6"
    style="width: 600px; height: auto;"
  >
    <div
      class="c61t1i4"
      style="height: 280px;"
    >
      <div
        class="c-k3pgz6 c9en45n"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-01.png"
        />
      </div>
      <div
        class="c-k3pgz6"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-02.png"
        />
      </div>
      <div
        class="c-k3pgz6"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-03.png"
        />
      </div>
      <div
        class="c-k3pgz6"
      >
        <img
          src="https://raw.githubusercontent.com/sheinsight/shineout-static/main/shineout-next/images/image/s-04.png"
        />
      </div>
    </div>
    <div
      class="c-96poap c-j4fn87 c-d5e41u"
    >
      <div
        class="c-xy6r4c c-k3iv1i"
      />
      <div
        class="c-xy6r4c"
      />
      <div
        class="c-xy6r4c"
      />
      <div
        class="c-xy6r4c"
      />
    </div>
  </div>
</div>
`;
